# cml-thompson-sampling-tutorial

./: .gitignore  .gitignore.rtf  Makefile  README.md  daum-russo-thompson.qmd  lecture-11.html  lecture-11.qmd  pyproject.toml
presentation/: daum-russo-thompson.qmd
