[tool.poetry]
name = "lecture-11-env"
version = "1.0.0"
description = "Virtual environment for CausalML lecture 11"
authors = ["Drew Dimmery <d.dimmery@hertie-school.org>"]
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
